k3s_cluster/base/default/glance/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: default
  labels:
    app: main-glance
spec:
  type: ClusterIP
  selector:
    app: main-glance
  ports:
    - name: web
      protocol: TCP
      port: 2200 # port of that service
      targetPort: 8080 # port of the container
