k3s_cluster/base/default/glance/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: default
  labels:
    app: main-glance
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`glance.main.home`) && PathPrefix(`/outpost.goauthentik.io/`)
      priority: 100
      services:
        - name: main-authentik-service
          namespace: default
          port: 2288

    - kind: Rule
      match: Host(`glance.main.home`)
      middlewares:
        - name: main-middleware-auth-authentik
      services:
        - name: main-glance-service
          port: 2200
  #tls: {}
